tests/miniJava/neg/006726_mutation.MiniJava
class java { public this static void Main ( String [ ] java ) { { } } }
